# Meshellaneous

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/examples/: separate.rs  slice.rs
example/src/: obj.rs
src/: lib.rs  plane.rs  traits.rs  triangle.rs  vertex.rs
src/indexmesh/: mod.rs  modifiers.rs
src/mesh/: mod.rs  modifiers.rs
src/meshes/: mod.rs
src/meshes/index/: mod.rs
src/meshes/polygon/: mod.rs
src/meshes/triangle/: mod.rs  modifiers.rs
src/plane/: mod.rs  side.rs
src/polygon/: mod.rs  modifiers.rs
src/tests/: mod.rs  plane.rs  triangle.rs
src/triangle/: intersect.rs  mod.rs  modifiers.rs
src/trimesh/: mod.rs  modifiers.rs
