[package]
name = "meshellaneous"
authors = ["PixelDots"]
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Miscellaneous Mesh utilities"
documentation = "https://docs.rs/meshellaneous"
repository = "https://github.com/PixelDoted/Meshellaneous"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"